Add basic gameplay

--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="player-container">
+        <div class="board"></div>
+        <p draggable="true">Your grid</p>
+
+        <div class="ships-container">
+          <div
+            class="ship-piece"
+            draggable="true"
+            data-horizontal="true"
+            data-ship-id="ship-5"
+          >
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
+          <div
+            class="ship-piece"
+            draggable="true"
+            data-horizontal="true"
+            data-ship-id="ship-4"
+          >
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
+          <div
+            class="ship-piece"
+            draggable="true"
+            data-horizontal="true"
+            data-ship-id="ship-3-1"
+          >
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
+          <div
+            class="ship-piece"
+            draggable="true"
+            data-horizontal="true"
+            data-ship-id="ship-3-2"
+          >
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
+          <div
+            class="ship-piece"
+            draggable="true"
+            data-horizontal="true"
+            data-ship-id="ship-2"
+          >
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+      </div>
+      <div class="computer-container">
+        <div class="board"></div>
+        <p>Opponent's grid</p>
+      </div>
+    </main>
+  </body>
 </html>
