--- a/src/template.html
+++ b/src/template.html
@@ -4,77 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
       <div class="player-container">
-        <div class="board"></div>
-        <p class="description">Your grid</p>
-
-        <div class="ships-container">
-          <!-- <div
-            class="ship-piece"
-            draggable="true"
-            data-horizontal="true"
-            data-ship-id="ship-5"
-          >
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-
-          <div
-            class="ship-piece"
-            draggable="true"
-            data-horizontal="true"
-            data-ship-id="ship-4"
-          >
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-
-          <div
-            class="ship-piece"
-            draggable="true"
-            data-horizontal="true"
-            data-ship-id="ship-3-1"
-          >
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-
-          <div
-            class="ship-piece"
-            draggable="true"
-            data-horizontal="true"
-            data-ship-id="ship-3-2"
-          >
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-
-          <div
-            class="ship-piece"
-            draggable="true"
-            data-horizontal="true"
-            data-ship-id="ship-2"
-          >
-            <div></div>
-            <div></div>
-          </div> -->
+        <div class="ships-remaining-container"></div>
+        <div class="board-container">
+          <div class="board"></div>
+          <p class="description">Your grid</p>
+          <div class="ships-container"></div>
+          <div class="game-result"></div>
+          <button class="play-btn">Play Again!</button>
         </div>
-        <button id="play-btn">Play Game</button>
-        <div id="game-result"></div>
       </div>
       <div class="computer-container disabled">
-        <div class="board"></div>
-        <p class="description">Opponent's grid</p>
+        <div class="board-container">
+          <div class="board"></div>
+          <p class="description">Opponent's grid</p>
+          <div class="game-result"></div>
+          <button class="play-btn">Play Again!</button>
+        </div>
+        <div class="ships-remaining-container"></div>
       </div>
     </main>
   </body>
